# drake

examples/coke_cam/: BUILD.bazel  coke_cam_demo.cc  package.xml
examples/coke_cam/urdf/: coke_can.urdf  couch_rough.urdf
examples/kuka_iiwa_arm/: BUILD.bazel  kuka_simulation.cc
examples/model_inspection/: BUILD.bazel  README.md  multiple_objects.sdf  simulation_runner.cc
examples/model_inspection/beer_bottle/: beer_bottle.sdf
examples/model_inspection/beer_bottle/meshes/: link_beer_bottle.mtl
examples/model_inspection/cereal_box/: cereal_box.sdf
examples/model_inspection/cereal_box/meshes/: link_cereal_box.mtl
examples/model_inspection/exterior_door_2020-02-14_01/meshes/: exterior_door.mtl  exterior_door_frame.mtl  exterior_door_handle.mtl  exterior_door_latch.mtl
examples/model_inspection/exterior_door_2020-02-14_01/urdfs/: exterior_door_environment.sdf
examples/model_inspection/storage_cabinet/: storage_cabinet.sdf
examples/model_inspection/storage_cabinet/meshes/: link_storage_cabinet_body.001_hull_6.mtl  link_storage_cabinet_body.mtl  link_storage_cabinet_door_L.mtl  link_storage_cabinet_door_R.mtl
examples/model_inspection/tea_bottle/: tea_bottle.mtl  tea_bottle.sdf
examples/model_inspection/wine_bottle/: wine_bottle.sdf
examples/pr2/: BUILD.bazel  README.md  chassis_pid_controller.cc  chassis_pid_controller.h  inverse_dynamics_controller.cc  inverse_dynamics_controller.h  main_controller.cc  main_controller.h  pr2_chassis_controller.cc  pr2_chassis_controller.h  pr2_pd_controller.cc  pr2_pd_controller.h  pr2_simulation.cc  pr2_upper_body_controller.cc  pr2_upper_body_controller.h  robot_parameters.cc  robot_parameters.h  sim_runner.cc  sim_world.cc  sim_world.h
examples/pr2/config/: pr2.yaml
examples/pr2/test/: main_controller_test.cc  pr2_controllers_test.cc  robot_parameters_loader_test.cc  robot_parameters_test.cc  sim_world_test.cc  test_robot_invalid.yaml  test_robot_valid.yaml
geometry/render/: BUILD.bazel  render_engine_vtk.cc
geometry/render/test/: distortion_test_checkerboard.mtl  gilchrist_island_body.mtl  render_engine_vtk_distortion_test.cc
multibody/tree/: BUILD.bazel  multibody_tree.h
multibody/tree/test/: door_hinge_test.cc  linear_spring_damper_test.cc
systems/sensors/: vtk_util.cc
