# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "coke_cam",
    srcs = ["coke_cam_demo.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//geometry:geometry_visualization",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis",
        "@gflags",
    ],
)

install_data()
