# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_binary(
    name = "coke_cam",
    srcs = ["coke_cam_demo.cc"],
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//common:essential",
        "//geometry:scene_graph",
        "//geometry:geometry_visualization",
        "//geometry/dev:scene_graph",
        "//geometry/dev/render:render_engine_vtk",
        "//lcm",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis",
        "//systems/rendering:pose_bundle_to_draw_message",
        "//systems/sensors/dev:rgbd_camera",
        "//systems/sensors:image_to_lcm_image_array_t",
        "@gflags",
        "@lcmtypes_robotlocomotion",
    ],
)

install_data()
