# -*- python -*-
load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)

load("//tools/install:install_data.bzl", "install_data")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "models",
    srcs = glob([
        "tea_bottle/**",
        "wine_bottle/**",
        "exterior_door_2020-02-14_01/**",
        "beer_bottle/**",
        "cereal_box/**",
        "storage_cabinet/**",
        "mock_kitchen/**",
        "*.sdf"
    ]),
)

drake_cc_binary(
    name = "simulation_runner",
    srcs = ["simulation_runner.cc"],
    data = [
        ":models",
    ],
    test_rule_args = [
        "--simulation_time=10",
    ],
    deps = [
        "//common:find_resource",
        "//geometry:geometry_visualization",
        "//geometry:scene_graph",
        "//geometry/render:render_engine_vtk",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/plant:contact_results_to_lcm",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/primitives:constant_vector_source",
        "//systems/sensors:image_to_lcm_image_array_t",
        "//systems/sensors:rgbd_sensor",
        "@gflags",
    ],
)