# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/install:install_data.bzl", "install_data")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "parameters",
    srcs = [
        "robot_parameters_loader.cc",
    ],
    hdrs = [
        "robot_parameters.h",
        "robot_parameters_loader.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common:essential",
        "//common/yaml:yaml_read_archive",
        "//geometry:scene_graph",
        "//multibody/plant",
    ],
)

drake_cc_library(
    name = "pr2_chassis_controller",
    srcs = ["pr2_chassis_controller.cc"],
    hdrs = ["pr2_chassis_controller.h"],
    deps = [
        ":parameters",
        "//common:essential",
        "//multibody/plant",
        "//systems/controllers",
        "//systems/primitives:matrix_gain",
    ],
)

drake_cc_library(
    name = "pr2_upper_body_controller",
    srcs = ["pr2_upper_body_controller.cc"],
    hdrs = ["pr2_upper_body_controller.h"],
    deps = [
        ":parameters",
        "//common:essential",
        "//multibody/plant",
        "//systems/controllers",
        "//systems/primitives:matrix_gain",
    ],
)

drake_cc_library(
    name = "sim_world",
    srcs = [
        "sim_world.cc",
    ],
    hdrs = [
        "sim_world.h",
    ],
    data = [
        ":config",
        ":models",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":parameters",
        ":pr2_chassis_controller",
        ":pr2_upper_body_controller",
        "//common:find_resource",
        "//geometry:scene_graph",
        "//geometry/render:render_engine_vtk",
        "//math:geometric_transform",
        "//multibody/benchmarks/inclined_plane",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//systems/primitives",
    ],
)

# === test/ ===

drake_cc_googletest(
    name = "robot_parameters_loader_test",
    data = [
        "test/test_robot_invalid.yaml",
        "test/test_robot_valid.yaml",
    ],
    deps = [
        ":parameters",
    ],
)

drake_cc_googletest(
    name = "main_controller_test",
    data = [
        ":config",
        ":models",
    ],
    deps = [
        ":main_controller",
        "//multibody/parsing",
        "//multibody/plant",
    ],
)

drake_cc_googletest(
    name = "sim_world_test",
    deps = [
        ":sim_world",
    ],
)

drake_cc_googletest(
    name = "load_pr2_simplified_test",
    data = [":models"],
    deps = [
        "//common:find_resource",
        "//multibody/parsing",
    ],
)

install_data()

add_lint_tests()
